# tradingsystem

./: .cursorrules  .gitignore  README.md  deploy_flows.py  environment.yml  prefect.yaml  prefect_deployment.py  prefect_secrets.py  pyproject.toml  requirements.txt  setup_database_block.py  setup_prefect_secrets.py  test.py  trading_deployment.py
config/: config.yaml  prefect.yaml  work_pool.yaml
docs/: README.md  getting_started.md  instructions.md
docs/archive/: README.md
src/: __init__.py
src/data/: data_manager.py  symbol_manager.py  yahoo_finance_loader.py
src/data/sources/: alpaca_source.py  base.py  yahoo_source.py
src/database/: db_manager.py  models.py
src/database/migrations/001_initial_schema/: 003_create_symbols.sql  005_create_yahoo_company_info.sql  006_create_yahoo_company_officers.sql
src/database/sql/: add_unique_constraint.sql  create_market_data_table.sql  create_tables.sql
src/flows/: flows.py  hourly_data_collection.py
src/scripts/: deploy_flows.py  run_data_collection.py
src/ui/: analysis.py  app.py  home.py  settings.py
src/ui/components/: chart_display.py  data_display.py  date_display.py  market_status.py  symbol_selector.py
src/ui/pages/: analysis.py  home.py  settings.py
src/ui/state/: market_data_state.py
src/utils/: config.py  logger.py  market_hours.py  prefect_logger.py
tests/: conftest.py  test_data_display.py  test_db_connection.py
tests/data/: test_data_manager.py
tests/data/sources/: test_alpaca_source.py
tests/database/: test_db_connection.py  test_symbol_manager.py
